--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="TMDB Search Engine site built by Jer Carlo Catallo a Web Developer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>World's Largest Movie Database Site - mr. MovieDB Theater </title>
+    <title>TMDb Search Engine with TMDb Api </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
