--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <title>TMDb Search Engine with TMDb Api </title>
   </head>
   <body>
+    <a class="skip-link" href="#root" style="display: none;">Skip to main</a>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
